src/parser/flex_bison/parser.output
Terminals unused in grammar

    sized_type_literal
    AS
    ASSERT
    ASYNC
    AWAIT
    BREAK
    CLASS
    CONTINUE
    DEL
    ELIF
    EXCEPT
    FINALLY
    FOR
    FROM
    GLOBAL
    IMPORT
    LAMBDA
    NONLOCAL
    PASS
    RETURN
    TRY
    WHILE
    WITH
    YIELD
    ARROW
    ":!"
    "=>"
    "self"
    "_"
    EOLCOMMENT
    TYPE_COMMENT


Grammar

    0 $accept: units END_OF_FILE

    1 units: units script_unit
    2      | script_unit
    3      | sep

    4 script_unit: statement

    5 statements: INDENT statements1 DEDENT

    6 sep_statements: sep statements

    7 body_stmts: single_line_statements
    8           | sep_statements

    9 statements1: statements1 statement
   10            | statement

   11 single_line_statements: single_line_multi_statements NEWLINE
   12                       | single_line_multi_statements COMMENT NEWLINE
   13                       | single_line_statement NEWLINE
   14                       | single_line_statement ";" NEWLINE
   15                       | single_line_statement ";" COMMENT NEWLINE
   16                       | single_line_statement COMMENT NEWLINE

   17 single_line_multi_statements: single_line_multi_statements_opt single_line_statement
   18                             | single_line_multi_statements_opt single_line_statement ";"

   19 single_line_multi_statements_opt: single_line_multi_statements_opt single_line_statement ";"
   20                                 | single_line_statement ";"

   21 statement: single_line_statement sep
   22          | multi_line_statement
   23          | multi_line_statement sep

   24 single_line_statement: expression_statment

   25 multi_line_statement: if_statement
   26                     | function_def

   27 decorators_opt: decorators
   28               | ε

   29 decorators: decorators "@" expr sep
   30           | "@" expr sep

   31 parameter: id
   32          | id ":" expr
   33          | id "=" expr
   34          | id ":" expr "=" expr

   35 parameter_list: defparameter_list "," "/" comma_opt
   36               | defparameter_list "," "/" "," parameter_list_no_posonly
   37               | parameter_list_no_posonly

   38 parameter_list_no_posonly: defparameter_list comma_opt
   39                          | defparameter_list "," parameter_list_starargs
   40                          | parameter_list_starargs

   41 defparameter_list: defparameter_list "," parameter
   42                  | parameter

   43 parameter_list_starargs: "*" "," defparameter_list comma_opt
   44                        | "*" "," "**" parameter comma_opt
   45                        | "*" "," defparameter_list "," "**" parameter comma_opt
   46                        | "*" parameter comma_opt
   47                        | "*" parameter "," defparameter_list comma_opt
   48                        | "*" parameter "," "**" parameter comma_opt
   49                        | "*" parameter "," defparameter_list "," "**" parameter comma_opt
   50                        | "**" parameter comma_opt

   51 parameter_list_opt: parameter_list
   52                   | ε

   53 comma_opt: ","
   54          | ε

   55 function_def: decorators_opt DEF id "(" parameter_list_opt ")" ":" body_stmts

   56 if_statement: IF expr ":" body_stmts
   57             | IF expr ":" body_stmts ELSE ":" body_stmts

   58 expression_statment: expr

   59 string: string string_literal
   60       | string_literal
   61       | id string_literal
   62       | string id string_literal

   63 expr_list_opt: expr_list
   64              | ε

   65 expr_list: expr_list "," expr
   66          | expr

   67 dict: expr ":" expr

   68 dict_list: dict_list "," dict
   69          | dict

   70 expr: id
   71     | integer_literal
   72     | string
   73     | real_literal
   74     | image_literal
   75     | TRUE
   76     | FALSE
   77     | NONE
   78     | "..."
   79     | "(" expr ")"
   80     | "(" ")"
   81     | "[" expr_list_opt "]"
   82     | "[" expr_list "," "]"
   83     | "{" expr_list "}"
   84     | "{" expr_list "," "}"
   85     | expr "." id
   86     | "{" "}"
   87     | "{" dict_list "}"
   88     | id ":=" expr
   89     | "*" expr
   90     | expr "+" expr
   91     | expr "-" expr
   92     | expr "*" expr
   93     | expr "/" expr
   94     | expr "%" expr
   95     | "-" expr
   96     | "+" expr
   97     | "~" expr
   98     | expr "**" expr
   99     | expr "//" expr
  100     | expr "@" expr
  101     | expr "&" expr
  102     | expr "|" expr
  103     | expr "^" expr
  104     | expr "<<" expr
  105     | expr ">>" expr
  106     | expr "==" expr
  107     | expr "!=" expr
  108     | expr "<" expr
  109     | expr "<=" expr
  110     | expr ">" expr
  111     | expr ">=" expr
  112     | expr "is" expr
  113     | expr "is not" expr
  114     | expr "in" expr
  115     | expr "not in" expr
  116     | expr "and" expr
  117     | expr "or" expr
  118     | "not" expr

  119 id: identifier

  120 sep: sep sep_one
  121    | sep_one

  122 sep_one: NEWLINE
  123        | COMMENT
  124        | ";"


Terminals, with rules where they appear

    END_OF_FILE (0) 0
    error (256)
    integer_literal <long long> (258) 71
    real_literal <double> (259) 73
    image_literal <double> (260) 74
    identifier <std::string> (261) 119
    sized_type_literal <std::string> (262)
    string_literal <std::string> (263) 59 60 61 62
    FALSE (264) 76
    TRUE (265) 75
    NONE (266) 77
    "and" (267) 116
    AS (268)
    ASSERT (269)
    ASYNC (270)
    AWAIT (271)
    BREAK (272)
    CLASS (273)
    CONTINUE (274)
    DEF (275) 55
    DEL (276)
    ELIF (277)
    ELSE (278) 57
    EXCEPT (279)
    FINALLY (280)
    FOR (281)
    FROM (282)
    GLOBAL (283)
    IF (284) 56 57
    IMPORT (285)
    "in" (286) 114
    "is" (287) 112
    "is not" (288) 113
    "not in" (289) 115
    LAMBDA (290)
    NONLOCAL (291)
    "not" (292) 118
    "or" (293) 117
    PASS (294)
    RETURN (295)
    TRY (296)
    WHILE (297)
    WITH (298)
    YIELD (299)
    ARROW (300)
    "&" (301) 101
    "^" (302) 103
    ":" (303) 32 34 55 56 57 67
    ":!" (304)
    "," (305) 35 36 39 41 43 44 45 47 48 49 53 65 68 82 84
    "=>" (306)
    "=" (307) 33 34
    ":=" (308) 88
    "==" (309) 106
    "{" (310) 83 84 86 87
    "(" (311) 55 79 80
    "[" (312) 81 82
    "-" (313) 91 95
    "." (314) 85
    "+" (315) 90 96
    "*" (316) 43 44 45 46 47 48 49 89 92
    "**" (317) 44 45 48 49 50 98
    "@" (318) 29 30 100
    "//" (319) 99
    "%" (320) 94
    "~" (321) 97
    "|" (322) 102
    "<<" (323) 104
    ">>" (324) 105
    "<" (325) 108
    "<=" (326) 109
    ">" (327) 110
    ">=" (328) 111
    "..." (329) 78
    "}" (330) 83 84 86 87
    ")" (331) 55 79 80
    "]" (332) 81 82
    "self" (333)
    ";" (334) 14 15 18 19 20 124
    "/" (335) 35 36 93
    "_" (336)
    INDENT (337) 5
    DEDENT (338) 5
    NEWLINE (339) 11 12 13 14 15 16 122
    COMMENT (340) 12 15 16 123
    EOLCOMMENT (341)
    TYPE_COMMENT (342)
    "!=" (343) 107
    UNARY (344)


Nonterminals, with rules where they appear

    $accept (90)
        on left: 0
    units (91)
        on left: 1 2 3
        on right: 0 1
    script_unit <Nonnull<Statement*>> (92)
        on left: 4
        on right: 1 2
    statements <std::vector<Nonnull<Statement*>>> (93)
        on left: 5
        on right: 6
    sep_statements <std::vector<Nonnull<Statement*>>> (94)
        on left: 6
        on right: 8
    body_stmts <std::vector<Nonnull<Statement*>>> (95)
        on left: 7 8
        on right: 55 56 57
    statements1 <std::vector<Nonnull<Statement*>>> (96)
        on left: 9 10
        on right: 5 9
    single_line_statements <std::vector<Nonnull<Statement*>>> (97)
        on left: 11 12 13 14 15 16
        on right: 7
    single_line_multi_statements <std::vector<Nonnull<Statement*>>> (98)
        on left: 17 18
        on right: 11 12
    single_line_multi_statements_opt <std::vector<Nonnull<Statement*>>> (99)
        on left: 19 20
        on right: 17 18 19
    statement <Nonnull<Statement*>> (100)
        on left: 21 22 23
        on right: 4 9 10
    single_line_statement <Nonnull<Statement*>> (101)
        on left: 24
        on right: 13 14 15 16 17 18 19 20 21
    multi_line_statement <Nonnull<Statement*>> (102)
        on left: 25 26
        on right: 22 23
    decorators_opt <std::vector<Nonnull<Expression*>>> (103)
        on left: 27 28
        on right: 55
    decorators <std::vector<Nonnull<Expression*>>> (104)
        on left: 29 30
        on right: 27 29
    parameter <Nonnull<Arg*>> (105)
        on left: 31 32 33 34
        on right: 41 42 44 45 46 47 48 49 50
    parameter_list <Nonnull<FnArg*>> (106)
        on left: 35 36 37
        on right: 51
    parameter_list_no_posonly <Nonnull<NoPosOnlyArg*>> (107)
        on left: 38 39 40
        on right: 36 37
    defparameter_list <std::vector<Nonnull<Arg*>>> (108)
        on left: 41 42
        on right: 35 36 38 39 41 43 45 47 49
    parameter_list_starargs <Nonnull<StarArg*>> (109)
        on left: 43 44 45 46 47 48 49 50
        on right: 39 40
    parameter_list_opt <Nonnull<Arguments*>> (110)
        on left: 51 52
        on right: 55
    comma_opt (111)
        on left: 53 54
        on right: 35 38 43 44 45 46 47 48 49 50
    function_def <Nonnull<Statement*>> (112)
        on left: 55
        on right: 26
    if_statement <Nonnull<Statement*>> (113)
        on left: 56 57
        on right: 25
    expression_statment <Nonnull<Statement*>> (114)
        on left: 58
        on right: 24
    string <Nonnull<Expression*>> (115)
        on left: 59 60 61 62
        on right: 59 62 72
    expr_list_opt <std::vector<Nonnull<Expression*>>> (116)
        on left: 63 64
        on right: 81
    expr_list <std::vector<Nonnull<Expression*>>> (117)
        on left: 65 66
        on right: 63 65 82 83 84
    dict <PairNonnullExpr> (118)
        on left: 67
        on right: 68 69
    dict_list <std::vector<PairNonnullExpr>> (119)
        on left: 68 69
        on right: 68 87
    expr <Nonnull<Expression*>> (120)
        on left: 70 71 72 73 74 75 76 77 78 79 80 81 82 83 84 85 86 87 88 89 90 91 92 93 94 95 96 97 98 99 100 101 102 103 104 105 106 107 108 109 110 111 112 113 114 115 116 117 118
        on right: 29 30 32 33 34 56 57 58 65 66 67 79 85 88 89 90 91 92 93 94 95 96 97 98 99 100 101 102 103 104 105 106 107 108 109 110 111 112 113 114 115 116 117 118
    id <Nonnull<Name*>> (121)
        on left: 119
        on right: 31 32 33 34 55 61 62 70 85 88
    sep <std::vector<std::string>> (122)
        on left: 120 121
        on right: 3 6 21 23 29 30 120
    sep_one <std::string> (123)
        on left: 122 123 124
        on right: 120 121


State 0

    0 $accept: • units END_OF_FILE

    integer_literal  shift, and go to state 1
    real_literal     shift, and go to state 2
    image_literal    shift, and go to state 3
    identifier       shift, and go to state 4
    string_literal   shift, and go to state 5
    FALSE            shift, and go to state 6
    TRUE             shift, and go to state 7
    NONE             shift, and go to state 8
    IF               shift, and go to state 9
    "not"            shift, and go to state 10
    "{"              shift, and go to state 11
    "("              shift, and go to state 12
    "["              shift, and go to state 13
    "-"              shift, and go to state 14
    "+"              shift, and go to state 15
    "*"              shift, and go to state 16
    "@"              shift, and go to state 17
    "~"              shift, and go to state 18
    "..."            shift, and go to state 19
    ";"              shift, and go to state 20
    NEWLINE          shift, and go to state 21
    COMMENT          shift, and go to state 22

    $default  reduce using rule 28 (decorators_opt)

    units                  go to state 23
    script_unit            go to state 24
    statement              go to state 25
    single_line_statement  go to state 26
    multi_line_statement   go to state 27
    decorators_opt         go to state 28
    decorators             go to state 29
    function_def           go to state 30
    if_statement           go to state 31
    expression_statment    go to state 32
    string                 go to state 33
    expr                   go to state 34
    id                     go to state 35
    sep                    go to state 36
    sep_one                go to state 37


State 1

   71 expr: integer_literal •

    $default  reduce using rule 71 (expr)


State 2

   73 expr: real_literal •

    $default  reduce using rule 73 (expr)


State 3

   74 expr: image_literal •

    $default  reduce using rule 74 (expr)


State 4

  119 id: identifier •

    $default  reduce using rule 119 (id)


State 5

   60 string: string_literal •

    $default  reduce using rule 60 (string)


State 6

   76 expr: FALSE •

    $default  reduce using rule 76 (expr)


State 7

   75 expr: TRUE •

    $default  reduce using rule 75 (expr)


State 8

   77 expr: NONE •

    $default  reduce using rule 77 (expr)


State 9

   56 if_statement: IF • expr ":" body_stmts
   57             | IF • expr ":" body_stmts ELSE ":" body_stmts

    integer_literal  shift, and go to state 1
    real_literal     shift, and go to state 2
    image_literal    shift, and go to state 3
    identifier       shift, and go to state 4
    string_literal   shift, and go to state 5
    FALSE            shift, and go to state 6
    TRUE             shift, and go to state 7
    NONE             shift, and go to state 8
    "not"            shift, and go to state 10
    "{"              shift, and go to state 11
    "("              shift, and go to state 12
    "["              shift, and go to state 13
    "-"              shift, and go to state 14
    "+"              shift, and go to state 15
    "*"              shift, and go to state 16
    "~"              shift, and go to state 18
    "..."            shift, and go to state 19

    string  go to state 33
    expr    go to state 38
    id      go to state 35


State 10

  118 expr: "not" • expr

    integer_literal  shift, and go to state 1
    real_literal     shift, and go to state 2
    image_literal    shift, and go to state 3
    identifier       shift, and go to state 4
    string_literal   shift, and go to state 5
    FALSE            shift, and go to state 6
    TRUE             shift, and go to state 7
    NONE             shift, and go to state 8
    "not"            shift, and go to state 10
    "{"              shift, and go to state 11
    "("              shift, and go to state 12
    "["              shift, and go to state 13
    "-"              shift, and go to state 14
    "+"              shift, and go to state 15
    "*"              shift, and go to state 16
    "~"              shift, and go to state 18
    "..."            shift, and go to state 19

    string  go to state 33
    expr    go to state 39
    id      go to state 35


State 11

   83 expr: "{" • expr_list "}"
   84     | "{" • expr_list "," "}"
   86     | "{" • "}"
   87     | "{" • dict_list "}"

    integer_literal  shift, and go to state 1
    real_literal     shift, and go to state 2
    image_literal    shift, and go to state 3
    identifier       shift, and go to state 4
    string_literal   shift, and go to state 5
    FALSE            shift, and go to state 6
    TRUE             shift, and go to state 7
    NONE             shift, and go to state 8
    "not"            shift, and go to state 10
    "{"              shift, and go to state 11
    "("              shift, and go to state 12
    "["              shift, and go to state 13
    "-"              shift, and go to state 14
    "+"              shift, and go to state 15
    "*"              shift, and go to state 16
    "~"              shift, and go to state 18
    "..."            shift, and go to state 19
    "}"              shift, and go to state 40

    string     go to state 33
    expr_list  go to state 41
    dict       go to state 42
    dict_list  go to state 43
    expr       go to state 44
    id         go to state 35


State 12

   79 expr: "(" • expr ")"
   80     | "(" • ")"

    integer_literal  shift, and go to state 1
    real_literal     shift, and go to state 2
    image_literal    shift, and go to state 3
    identifier       shift, and go to state 4
    string_literal   shift, and go to state 5
    FALSE            shift, and go to state 6
    TRUE             shift, and go to state 7
    NONE             shift, and go to state 8
    "not"            shift, and go to state 10
    "{"              shift, and go to state 11
    "("              shift, and go to state 12
    "["              shift, and go to state 13
    "-"              shift, and go to state 14
    "+"              shift, and go to state 15
    "*"              shift, and go to state 16
    "~"              shift, and go to state 18
    "..."            shift, and go to state 19
    ")"              shift, and go to state 45

    string  go to state 33
    expr    go to state 46
    id      go to state 35


State 13

   81 expr: "[" • expr_list_opt "]"
   82     | "[" • expr_list "," "]"

    integer_literal  shift, and go to state 1
    real_literal     shift, and go to state 2
    image_literal    shift, and go to state 3
    identifier       shift, and go to state 4
    string_literal   shift, and go to state 5
    FALSE            shift, and go to state 6
    TRUE             shift, and go to state 7
    NONE             shift, and go to state 8
    "not"            shift, and go to state 10
    "{"              shift, and go to state 11
    "("              shift, and go to state 12
    "["              shift, and go to state 13
    "-"              shift, and go to state 14
    "+"              shift, and go to state 15
    "*"              shift, and go to state 16
    "~"              shift, and go to state 18
    "..."            shift, and go to state 19

    $default  reduce using rule 64 (expr_list_opt)

    string         go to state 33
    expr_list_opt  go to state 47
    expr_list      go to state 48
    expr           go to state 49
    id             go to state 35


State 14

   95 expr: "-" • expr

    integer_literal  shift, and go to state 1
    real_literal     shift, and go to state 2
    image_literal    shift, and go to state 3
    identifier       shift, and go to state 4
    string_literal   shift, and go to state 5
    FALSE            shift, and go to state 6
    TRUE             shift, and go to state 7
    NONE             shift, and go to state 8
    "not"            shift, and go to state 10
    "{"              shift, and go to state 11
    "("              shift, and go to state 12
    "["              shift, and go to state 13
    "-"              shift, and go to state 14
    "+"              shift, and go to state 15
    "*"              shift, and go to state 16
    "~"              shift, and go to state 18
    "..."            shift, and go to state 19

    string  go to state 33
    expr    go to state 50
    id      go to state 35


State 15

   96 expr: "+" • expr

    integer_literal  shift, and go to state 1
    real_literal     shift, and go to state 2
    image_literal    shift, and go to state 3
    identifier       shift, and go to state 4
    string_literal   shift, and go to state 5
    FALSE            shift, and go to state 6
    TRUE             shift, and go to state 7
    NONE             shift, and go to state 8
    "not"            shift, and go to state 10
    "{"              shift, and go to state 11
    "("              shift, and go to state 12
    "["              shift, and go to state 13
    "-"              shift, and go to state 14
    "+"              shift, and go to state 15
    "*"              shift, and go to state 16
    "~"              shift, and go to state 18
    "..."            shift, and go to state 19

    string  go to state 33
    expr    go to state 51
    id      go to state 35


State 16

   89 expr: "*" • expr

    integer_literal  shift, and go to state 1
    real_literal     shift, and go to state 2
    image_literal    shift, and go to state 3
    identifier       shift, and go to state 4
    string_literal   shift, and go to state 5
    FALSE            shift, and go to state 6
    TRUE             shift, and go to state 7
    NONE             shift, and go to state 8
    "not"            shift, and go to state 10
    "{"              shift, and go to state 11
    "("              shift, and go to state 12
    "["              shift, and go to state 13
    "-"              shift, and go to state 14
    "+"              shift, and go to state 15
    "*"              shift, and go to state 16
    "~"              shift, and go to state 18
    "..."            shift, and go to state 19

    string  go to state 33
    expr    go to state 52
    id      go to state 35


State 17

   30 decorators: "@" • expr sep

    integer_literal  shift, and go to state 1
    real_literal     shift, and go to state 2
    image_literal    shift, and go to state 3
    identifier       shift, and go to state 4
    string_literal   shift, and go to state 5
    FALSE            shift, and go to state 6
    TRUE             shift, and go to state 7
    NONE             shift, and go to state 8
    "not"            shift, and go to state 10
    "{"              shift, and go to state 11
    "("              shift, and go to state 12
    "["              shift, and go to state 13
    "-"              shift, and go to state 14
    "+"              shift, and go to state 15
    "*"              shift, and go to state 16
    "~"              shift, and go to state 18
    "..."            shift, and go to state 19

    string  go to state 33
    expr    go to state 53
    id      go to state 35


State 18

   97 expr: "~" • expr

    integer_literal  shift, and go to state 1
    real_literal     shift, and go to state 2
    image_literal    shift, and go to state 3
    identifier       shift, and go to state 4
    string_literal   shift, and go to state 5
    FALSE            shift, and go to state 6
    TRUE             shift, and go to state 7
    NONE             shift, and go to state 8
    "not"            shift, and go to state 10
    "{"              shift, and go to state 11
    "("              shift, and go to state 12
    "["              shift, and go to state 13
    "-"              shift, and go to state 14
    "+"              shift, and go to state 15
    "*"              shift, and go to state 16
    "~"              shift, and go to state 18
    "..."            shift, and go to state 19

    string  go to state 33
    expr    go to state 54
    id      go to state 35


State 19

   78 expr: "..." •

    $default  reduce using rule 78 (expr)


State 20

  124 sep_one: ";" •

    $default  reduce using rule 124 (sep_one)


State 21

  122 sep_one: NEWLINE •

    $default  reduce using rule 122 (sep_one)


State 22

  123 sep_one: COMMENT •

    $default  reduce using rule 123 (sep_one)


State 23

    0 $accept: units • END_OF_FILE
    1 units: units • script_unit

    END_OF_FILE      shift, and go to state 55
    integer_literal  shift, and go to state 1
    real_literal     shift, and go to state 2
    image_literal    shift, and go to state 3
    identifier       shift, and go to state 4
    string_literal   shift, and go to state 5
    FALSE            shift, and go to state 6
    TRUE             shift, and go to state 7
    NONE             shift, and go to state 8
    IF               shift, and go to state 9
    "not"            shift, and go to state 10
    "{"              shift, and go to state 11
    "("              shift, and go to state 12
    "["              shift, and go to state 13
    "-"              shift, and go to state 14
    "+"              shift, and go to state 15
    "*"              shift, and go to state 16
    "@"              shift, and go to state 17
    "~"              shift, and go to state 18
    "..."            shift, and go to state 19

    $default  reduce using rule 28 (decorators_opt)

    script_unit            go to state 56
    statement              go to state 25
    single_line_statement  go to state 26
    multi_line_statement   go to state 27
    decorators_opt         go to state 28
    decorators             go to state 29
    function_def           go to state 30
    if_statement           go to state 31
    expression_statment    go to state 32
    string                 go to state 33
    expr                   go to state 34
    id                     go to state 35


State 24

    2 units: script_unit •

    $default  reduce using rule 2 (units)


State 25

    4 script_unit: statement •

    $default  reduce using rule 4 (script_unit)


State 26

   21 statement: single_line_statement • sep

    ";"      shift, and go to state 20
    NEWLINE  shift, and go to state 21
    COMMENT  shift, and go to state 22

    sep      go to state 57
    sep_one  go to state 37


State 27

   22 statement: multi_line_statement •
   23          | multi_line_statement • sep

    ";"      shift, and go to state 20
    NEWLINE  shift, and go to state 21
    COMMENT  shift, and go to state 22

    $default  reduce using rule 22 (statement)

    sep      go to state 58
    sep_one  go to state 37


State 28

   55 function_def: decorators_opt • DEF id "(" parameter_list_opt ")" ":" body_stmts

    DEF  shift, and go to state 59


State 29

   27 decorators_opt: decorators •
   29 decorators: decorators • "@" expr sep

    "@"  shift, and go to state 60

    $default  reduce using rule 27 (decorators_opt)


State 30

   26 multi_line_statement: function_def •

    $default  reduce using rule 26 (multi_line_statement)


State 31

   25 multi_line_statement: if_statement •

    $default  reduce using rule 25 (multi_line_statement)


State 32

   24 single_line_statement: expression_statment •

    $default  reduce using rule 24 (single_line_statement)


State 33

   59 string: string • string_literal
   62       | string • id string_literal
   72 expr: string •

    identifier      shift, and go to state 4
    string_literal  shift, and go to state 61

    $default  reduce using rule 72 (expr)

    id  go to state 62


State 34

   58 expression_statment: expr •
   85 expr: expr • "." id
   90     | expr • "+" expr
   91     | expr • "-" expr
   92     | expr • "*" expr
   93     | expr • "/" expr
   94     | expr • "%" expr
   98     | expr • "**" expr
   99     | expr • "//" expr
  100     | expr • "@" expr
  101     | expr • "&" expr
  102     | expr • "|" expr
  103     | expr • "^" expr
  104     | expr • "<<" expr
  105     | expr • ">>" expr
  106     | expr • "==" expr
  107     | expr • "!=" expr
  108     | expr • "<" expr
  109     | expr • "<=" expr
  110     | expr • ">" expr
  111     | expr • ">=" expr
  112     | expr • "is" expr
  113     | expr • "is not" expr
  114     | expr • "in" expr
  115     | expr • "not in" expr
  116     | expr • "and" expr
  117     | expr • "or" expr

    "and"     shift, and go to state 63
    "in"      shift, and go to state 64
    "is"      shift, and go to state 65
    "is not"  shift, and go to state 66
    "not in"  shift, and go to state 67
    "or"      shift, and go to state 68
    "&"       shift, and go to state 69
    "^"       shift, and go to state 70
    "=="      shift, and go to state 71
    "-"       shift, and go to state 72
    "."       shift, and go to state 73
    "+"       shift, and go to state 74
    "*"       shift, and go to state 75
    "**"      shift, and go to state 76
    "@"       shift, and go to state 77
    "//"      shift, and go to state 78
    "%"       shift, and go to state 79
    "|"       shift, and go to state 80
    "<<"      shift, and go to state 81
    ">>"      shift, and go to state 82
    "<"       shift, and go to state 83
    "<="      shift, and go to state 84
    ">"       shift, and go to state 85
    ">="      shift, and go to state 86
    "/"       shift, and go to state 87
    "!="      shift, and go to state 88

    $default  reduce using rule 58 (expression_statment)


State 35

   61 string: id • string_literal
   70 expr: id •
   88     | id • ":=" expr

    string_literal  shift, and go to state 89
    ":="            shift, and go to state 90

    $default  reduce using rule 70 (expr)


State 36

    3 units: sep •
  120 sep: sep • sep_one

    ";"      shift, and go to state 20
    NEWLINE  shift, and go to state 21
    COMMENT  shift, and go to state 22

    $default  reduce using rule 3 (units)

    sep_one  go to state 91


State 37

  121 sep: sep_one •

    $default  reduce using rule 121 (sep)


State 38

   56 if_statement: IF expr • ":" body_stmts
   57             | IF expr • ":" body_stmts ELSE ":" body_stmts
   85 expr: expr • "." id
   90     | expr • "+" expr
   91     | expr • "-" expr
   92     | expr • "*" expr
   93     | expr • "/" expr
   94     | expr • "%" expr
   98     | expr • "**" expr
   99     | expr • "//" expr
  100     | expr • "@" expr
  101     | expr • "&" expr
  102     | expr • "|" expr
  103     | expr • "^" expr
  104     | expr • "<<" expr
  105     | expr • ">>" expr
  106     | expr • "==" expr
  107     | expr • "!=" expr
  108     | expr • "<" expr
  109     | expr • "<=" expr
  110     | expr • ">" expr
  111     | expr • ">=" expr
  112     | expr • "is" expr
  113     | expr • "is not" expr
  114     | expr • "in" expr
  115     | expr • "not in" expr
  116     | expr • "and" expr
  117     | expr • "or" expr

    "and"     shift, and go to state 63
    "in"      shift, and go to state 64
    "is"      shift, and go to state 65
    "is not"  shift, and go to state 66
    "not in"  shift, and go to state 67
    "or"      shift, and go to state 68
    "&"       shift, and go to state 69
    "^"       shift, and go to state 70
    ":"       shift, and go to state 92
    "=="      shift, and go to state 71
    "-"       shift, and go to state 72
    "."       shift, and go to state 73
    "+"       shift, and go to state 74
    "*"       shift, and go to state 75
    "**"      shift, and go to state 76
    "@"       shift, and go to state 77
    "//"      shift, and go to state 78
    "%"       shift, and go to state 79
    "|"       shift, and go to state 80
    "<<"      shift, and go to state 81
    ">>"      shift, and go to state 82
    "<"       shift, and go to state 83
    "<="      shift, and go to state 84
    ">"       shift, and go to state 85
    ">="      shift, and go to state 86
    "/"       shift, and go to state 87
    "!="      shift, and go to state 88


State 39

   85 expr: expr • "." id
   90     | expr • "+" expr
   91     | expr • "-" expr
   92     | expr • "*" expr
   93     | expr • "/" expr
   94     | expr • "%" expr
   98     | expr • "**" expr
   99     | expr • "//" expr
  100     | expr • "@" expr
  101     | expr • "&" expr
  102     | expr • "|" expr
  103     | expr • "^" expr
  104     | expr • "<<" expr
  105     | expr • ">>" expr
  106     | expr • "==" expr
  107     | expr • "!=" expr
  108     | expr • "<" expr
  109     | expr • "<=" expr
  110     | expr • ">" expr
  111     | expr • ">=" expr
  112     | expr • "is" expr
  113     | expr • "is not" expr
  114     | expr • "in" expr
  115     | expr • "not in" expr
  116     | expr • "and" expr
  117     | expr • "or" expr
  118     | "not" expr •

    "in"      shift, and go to state 64
    "is"      shift, and go to state 65
    "is not"  shift, and go to state 66
    "not in"  shift, and go to state 67
    "&"       shift, and go to state 69
    "^"       shift, and go to state 70
    "=="      shift, and go to state 71
    "-"       shift, and go to state 72
    "."       shift, and go to state 73
    "+"       shift, and go to state 74
    "*"       shift, and go to state 75
    "**"      shift, and go to state 76
    "@"       shift, and go to state 77
    "//"      shift, and go to state 78
    "%"       shift, and go to state 79
    "|"       shift, and go to state 80
    "<<"      shift, and go to state 81
    ">>"      shift, and go to state 82
    "<"       shift, and go to state 83
    "<="      shift, and go to state 84
    ">"       shift, and go to state 85
    ">="      shift, and go to state 86
    "/"       shift, and go to state 87
    "!="      shift, and go to state 88

    $default  reduce using rule 118 (expr)


State 40

   86 expr: "{" "}" •

    $default  reduce using rule 86 (expr)


State 41

   65 expr_list: expr_list • "," expr
   83 expr: "{" expr_list • "}"
   84     | "{" expr_list • "," "}"

    ","  shift, and go to state 93
    "}"  shift, and go to state 94


State 42

   69 dict_list: dict •

    $default  reduce using rule 69 (dict_list)


State 43

   68 dict_list: dict_list • "," dict
   87 expr: "{" dict_list • "}"

    ","  shift, and go to state 95
    "}"  shift, and go to state 96


State 44

   66 expr_list: expr •
   67 dict: expr • ":" expr
   85 expr: expr • "." id
   90     | expr • "+" expr
   91     | expr • "-" expr
   92     | expr • "*" expr
   93     | expr • "/" expr
   94     | expr • "%" expr
   98     | expr • "**" expr
   99     | expr • "//" expr
  100     | expr • "@" expr
  101     | expr • "&" expr
  102     | expr • "|" expr
  103     | expr • "^" expr
  104     | expr • "<<" expr
  105     | expr • ">>" expr
  106     | expr • "==" expr
  107     | expr • "!=" expr
  108     | expr • "<" expr
  109     | expr • "<=" expr
  110     | expr • ">" expr
  111     | expr • ">=" expr
  112     | expr • "is" expr
  113     | expr • "is not" expr
  114     | expr • "in" expr
  115     | expr • "not in" expr
  116     | expr • "and" expr
  117     | expr • "or" expr

    "and"     shift, and go to state 63
    "in"      shift, and go to state 64
    "is"      shift, and go to state 65
    "is not"  shift, and go to state 66
    "not in"  shift, and go to state 67
    "or"      shift, and go to state 68
    "&"       shift, and go to state 69
    "^"       shift, and go to state 70
    ":"       shift, and go to state 97
    "=="      shift, and go to state 71
    "-"       shift, and go to state 72
    "."       shift, and go to state 73
    "+"       shift, and go to state 74
    "*"       shift, and go to state 75
    "**"      shift, and go to state 76
    "@"       shift, and go to state 77
    "//"      shift, and go to state 78
    "%"       shift, and go to state 79
    "|"       shift, and go to state 80
    "<<"      shift, and go to state 81
    ">>"      shift, and go to state 82
    "<"       shift, and go to state 83
    "<="      shift, and go to state 84
    ">"       shift, and go to state 85
    ">="      shift, and go to state 86
    "/"       shift, and go to state 87
    "!="      shift, and go to state 88

    $default  reduce using rule 66 (expr_list)


State 45

   80 expr: "(" ")" •

    $default  reduce using rule 80 (expr)


State 46

   79 expr: "(" expr • ")"
   85     | expr • "." id
   90     | expr • "+" expr
   91     | expr • "-" expr
   92     | expr • "*" expr
   93     | expr • "/" expr
   94     | expr • "%" expr
   98     | expr • "**" expr
   99     | expr • "//" expr
  100     | expr • "@" expr
  101     | expr • "&" expr
  102     | expr • "|" expr
  103     | expr • "^" expr
  104     | expr • "<<" expr
  105     | expr • ">>" expr
  106     | expr • "==" expr
  107     | expr • "!=" expr
  108     | expr • "<" expr
  109     | expr • "<=" expr
  110     | expr • ">" expr
  111     | expr • ">=" expr
  112     | expr • "is" expr
  113     | expr • "is not" expr
  114     | expr • "in" expr
  115     | expr • "not in" expr
  116     | expr • "and" expr
  117     | expr • "or" expr
